Smoke tests: move the current tests into new module